--- a/src/main/resources/META-INF/resources/templates/layout-simple.xhtml
+++ b/src/main/resources/META-INF/resources/templates/layout-simple.xhtml
@@ -1,24 +1,42 @@
 <?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-    <h:head>
+<h:head>
+    <f:facet name="first">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <title><ui:insert name="title">Bolsa de empleo</ui:insert></title>
-        
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
-        <h:outputStylesheet library="css" name="styles.css" />
-        
-        <ui:insert name="head-extras" />
-    </h:head>
+    </f:facet>
 
-    <h:body>
+    <title>
+        <ui:insert name="title">Bolsa de Empleo - UTEQ</ui:insert>
+    </title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+    <h:outputStylesheet library="css" name="styles.css" />
+
+    <ui:insert name="head-extras" />
+</h:head>
+
+<h:body>
+    <h:messages id="globalMessages" globalOnly="true"
+                styleClass="messages-container"
+                infoClass="alert-info"
+                errorClass="alert-danger"
+                layout="table" />
+
+    <div class="main-wrapper">
         <ui:insert name="content">
-            Contenido por defecto
+            <div class="default-content">
+                <h1>Contenido por defecto</h1>
+                <p>Cargando módulos del sistema...</p>
+            </div>
         </ui:insert>
-    </h:body>
+    </div>
 
+    <ui:insert name="scripts-footer" />
+</h:body>
 </html>
